<resources>
    <string name="app_name">小鸟矿池</string>
    <string name="maininfo">目前仅收1%的手续费，欢迎大家到小鸟矿池挖矿！</string>
    <string name="logintop">手机快捷登录</string>
    <string name="etusername">请输入手机号</string>
    <string name="etpassword">请输入验证码</string>
    <string name="tv_getcode">获取验证码</string>
    <string name="login">新用户验证码登录即完成注册</string>
    <string name="btn_load">登录</string>
    <string name="dailyincome">实时收益（GH/S）</string>
    <string name="edit">编辑</string>
    <string name="addwallet">添加钱包</string>
    <string name="send">提交</string>
    <string name="baseinfo">基本信息</string>
    <string name="walletname">钱包名称</string>
    <string name="Miningtool">挖矿程序</string>
    <string name="basetool">基本设置</string>
    <string name="version">版本</string>
    <string name="pool">矿池</string>
    <string name="minercanshu">矿工参数</string>
    <string name="doublepool">双矿设置</string>
    <string name="DWal">DWal</string>
    <string name="DWalhint">辅助钱包，用于双挖</string>
    <string name="wallet_currency">辅助币种</string>
    <string name="wallet_doubleratio">双挖比值</string>
    <string name="wallet_doubleratiohint">填写0——100数字，建议填写20</string>
    <string name="wallet_doublepool">双挖矿池</string>
    <string name="feedback">意见反馈</string>
    <string name="feedbackinfo">我们的成长离不开您的宝贵意见</string>
    <string name="gongnengyichang">功能异常</string>
    <string name="tiyanwenti">体验问题</string>
    <string name="xingongnengjianyi">新功能建议</string>
    <string name="pleaseinput">请输入文字</string>
    <string name="morenphone">默认用户注册手机号</string>
    <string name="kkos">KKOS</string>
    <string name="xieyi">我已阅读并同意用户协议</string>
    <string name="fuwu">《用户协议服务》</string>
    <string name="zhengce">《隐私政策》</string>
    <string name="otherload">第三方登录</string>
    <string name="app_chinese">小鸟矿池</string>


    <string name="service_error">服务器出错</string>
    <string name="not_found">请求的资源不存在</string>
    <string name="timeout">请求超时</string>
    <string name="unexpected_error">未知错误</string>
    <string name="network_wrong">网络有问题</string>
</resources>
